# gsbfs

./: .gitignore  README.md  example.py  gsbfs_example.ipynb  pyproject.toml
gsbfs/: gsbfs.py
