[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsbfs"
description = "Gram-Schmidt Boruta Feature Selection."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["machine-learning", "feature-selection", "feature-extraction", "feature-engineering"]
authors = [
  { name = "Thomas Civeit", email = "thomas@civeit.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tomcv/gsbfs"
Issues = "https://github.com/tomcv/gsbfs/issues"

[tool.hatch.version]
path = "gsbfs/__about__.py"
